--- a/_data/data.yml
+++ b/_data/data.yml
@@ -99,11 +99,11 @@ publications:
     #   You can list your publications in this section. Lorem ipsum dolor sit
     #   amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
     #   bibendum fringilla a eu lectus.
-    # papers:
-    #   - title: Novel View Synthesis with Skip Connections
-    #     link: "#"
-    #     authors: Juhyeon Kim and Young Min Kim
-    #     conference: ICIP, 2020
+    papers:
+      - title: Novel View Synthesis with Skip Connections
+        link: "https://github.com/juhyeonkim95/NovelViewSynthesis"
+        authors: Juhyeon Kim and Young Min Kim
+        conference: ICIP, 2020
 
 awards:
     - role: Presidential Science Scholarship
