--- a/_data/data.yml
+++ b/_data/data.yml
@@ -103,7 +103,9 @@ publications:
       - title: Novel View Synthesis with Skip Connections
         link: "https://github.com/juhyeonkim95/NovelViewSynthesis"
         authors: Juhyeon Kim and Young Min Kim
-        conference: ICIP, 2020
+        conference: IEEE International Conference on Image Processing (ICIP), 2020
+        code: aaa
+        paper: "https://github.com/juhyeonkim95/NovelViewSynthesis"
 
 awards:
     - role: Presidential Science Scholarship
