--- a/_data/data.yml
+++ b/_data/data.yml
@@ -104,7 +104,7 @@ publications:
         link: "https://github.com/juhyeonkim95/NovelViewSynthesis"
         authors: Juhyeon Kim and Young Min Kim
         conference: IEEE International Conference on Image Processing (ICIP), 2020
-        code: aaa
+        code: "https://github.com/juhyeonkim95/NovelViewSynthesis"
         paper: "https://github.com/juhyeonkim95/NovelViewSynthesis"
 
 awards:
