--- a/_data/data.yml
+++ b/_data/data.yml
@@ -101,16 +101,16 @@ publications:
     #   bibendum fringilla a eu lectus.
     papers:
       - title: Novel View Synthesis with Skip Connections
-        link: "https://github.com/juhyeonkim95/NovelViewSynthesis"
+        link: "https://ieeexplore.ieee.org/abstract/document/9191076"
         authors: Juhyeon Kim and Young Min Kim
-        conference: IEEE International Conference on Image Processing (ICIP), 2020
+        conference: IEEE International Conference on Image Processing (ICIP), Oct 2020
         code: "https://github.com/juhyeonkim95/NovelViewSynthesis"
-        paper: "https://github.com/juhyeonkim95/NovelViewSynthesis"
-      - title: Optimizing Large-Scale Fleet Management on a Road Network using Multi-Agent Deep Reinforcement Learning with Graph Neural Network
-        authors: Juhyeon Kim
-        conference: arXiv, 2020
-        code: "https://github.com/juhyeonkim95/NovelViewSynthesis"
-        paper: "https://github.com/juhyeonkim95/NovelViewSynthesis"
+        paper: "https://github.com/juhyeonkim95/NovelViewSynthesis/blob/master/paper.pdf"
+      # - title: Optimizing Large-Scale Fleet Management on a Road Network using Multi-Agent Deep Reinforcement Learning with Graph Neural Network
+      #   authors: Juhyeon Kim
+      #   conference: arXiv
+      #   code: "https://github.com/juhyeonkim95/NovelViewSynthesis"
+      #   paper: "https://github.com/juhyeonkim95/NovelViewSynthesis"
 
 awards:
     - role: Presidential Science Scholarship
@@ -118,7 +118,7 @@ awards:
       company: Korea Student Aid Foundation
       details: |
         Scholarship for undergraduate students with excellent science and engineering.
-    - role: Academic festival for undergraduate students
+    - role: SNU Academic Festival for Undergraduate Students
       time: 2017
       company: Seoul National University
       details: |
