--- a/_data/data.yml
+++ b/_data/data.yml
@@ -42,15 +42,15 @@ sidebar:
       - item: Reinforcement Learning
         link:
 
-      - item: Computer Vision
+      - item: 3D Computer Vision
         link:
 
 career-profile:
     title: Career Profile
     summary: |
       I am currently under the master's course at Seoul National University [3D vision lab](http://3d.snu.ac.kr/).
-      My main areas of interest are computer graphics, reinforcement learning, and 3D computer vision. 
-      Currently my research interest is efficient path tracing on GPU with reinforcement learning techiniques.
+      My main areas of interest are computer graphics (especially real-time rendering and ray tracing), reinforcement learning, and 3D computer vision. 
+      Currently I am doing research about efficient path tracing on GPU with reinforcement learning.
 
 education:
     - degree: MSc in Electrical and Computer Engineering
@@ -80,17 +80,17 @@ experiences:
 projects:
     title: Personal Projects
     intro: >
-      During my graduace & undergradute years, I conducted many personal projects.
+      During my graduate and undergradute years, I conducted many personal projects.
     assignments:
-      - title: Volumetric Path Tracing with Reinforcement Learning (WIP)
+      - title: Volumetric path tracing with RL
         tagline: "Expansion of previous RL application on path tracing to volumentric case. Implemented with Python and Optix 6.5. Work in progress."
         image: VolumetricPathtracing.png
 
-      - title: Ray Tracing with OpenGL
+      - title: Ray tracing with OpenGL
         tagline: "Simple real-time ray tracing implement with OpenGL."
         image: RayTracing.png
 
-      - title: Starcraft + RL
+      - title: Starcraft micro unit control with RL
         link: "https://www.youtube.com/watch?v=N_xB3lE0awQ"
         image: StarcraftRL.png
         tagline: "Starcraft micro unit control using multi-agent reinforcement learning."
@@ -115,29 +115,29 @@ publications:
         code: "https://github.com/juhyeonkim95/NovelViewSynthesis"
         paper: "2020novelview.pdf"
         image: "2020novelview.PNG"
-      - title: Optimizing Large-Scale Fleet Management on a Road Network using Multi-Agent Deep Reinforcement Learning with Graph Neural Network
-        authors: Juhyeon Kim
-        conference: arXiv, Nov 2020
-        code: "https://github.com/juhyeonkim95/TaxiSimulatorOnGraph"
-        paper: "2020taxi.pdf"
-        image: "2020taxi_q.gif"
+      # - title: Optimizing Large-Scale Fleet Management on a Road Network using Multi-Agent Deep Reinforcement Learning with Graph Neural Network
+      #   authors: Juhyeon Kim
+      #   conference: arXiv, Nov 2020
+      #   code: "https://github.com/juhyeonkim95/TaxiSimulatorOnGraph"
+      #   paper: "2020taxi.pdf"
+      #   image: "2020taxi_q.gif"
 
 awards:
-    - role: Presidential Science Scholarship
-      time: 2014 - 2019
-      company: Korea Student Aid Foundation
-      details: |
-        Scholarship for undergraduate students with excellent science and engineering.
-    - role: SNU Academic Festival for Undergraduate Students
-      time: 2017
-      company: Seoul National University
-      details: |
-        Won the best thesis award for the paper titled "Real-time photo-realistic rendering of large 3d natural scenes".
     - role: SNU Alumni Association President Award
       time: 2019
       company: Seoul National University
       details: |
         Award for honors graduates.
+    - role: SNU Academic Festival for Undergraduate Students
+      time: 2017
+      company: Seoul National University
+      details: |
+        Won the best thesis award for the paper titled "Real-time photo-realistic rendering of large 3d natural scenes".
+    - role: Presidential Science Scholarship
+      time: 2014 - 2019
+      company: Korea Student Aid Foundation
+      details: |
+        Scholarship for undergraduate students with excellent science and engineering.
 skills:
     title: Skills &amp; Proficiency
 
@@ -151,7 +151,7 @@ skills:
       - name: C++
         level: 88%
 
-      - name: OpenGL related (GLSL)
+      - name: OpenGL (GLSL)
         level: 90%
 
       - name: OptiX
