--- a/_data/data.yml
+++ b/_data/data.yml
@@ -70,7 +70,7 @@ experiences:
         I was in charge of TA for the following subjects.
           - 2020-1: Graphics Programming
           - 2019-2: Machine learning and optimization for 3D data
-    - role: Intern
+    - role: Undergraduate Intern
       time: 2019 - 2019
       company: Kakao Mobility, Republic of Korea
       details: |
@@ -118,6 +118,12 @@ publications:
     #   amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
     #   bibendum fringilla a eu lectus.
     papers:
+      - title: Optimizing Large-Scale Fleet Management on a Road Network using Multi-Agent Deep Reinforcement Learning with Graph Neural Network
+        authors: Juhyeon Kim and Kihyun Kim
+        conference: The 24th IEEE International Conference on Intelligent Transportation Systems (ITSC), Sep 2021
+        code: "https://github.com/juhyeonkim95/TaxiSimulatorOnGraph"
+        paper: "2021taxi.pdf"
+        image: "2020taxi_q.gif"
       - title: Novel View Synthesis with Skip Connections
         link: "https://ieeexplore.ieee.org/abstract/document/9191076"
         authors: Juhyeon Kim and Young Min Kim
@@ -125,12 +131,7 @@ publications:
         code: "https://github.com/juhyeonkim95/NovelViewSynthesis"
         paper: "2020novelview.pdf"
         image: "2020novelview.PNG"
-      # - title: Optimizing Large-Scale Fleet Management on a Road Network using Multi-Agent Deep Reinforcement Learning with Graph Neural Network
-      #   authors: Juhyeon Kim
-      #   conference: arXiv, Nov 2020
-      #   code: "https://github.com/juhyeonkim95/TaxiSimulatorOnGraph"
-      #   paper: "2020taxi.pdf"
-      #   image: "2020taxi_q.gif"
+
 
 awards:
     - role: SNU Alumni Association President Award
